--- a/src/templates/program.c.ejs
+++ b/src/templates/program.c.ejs
@@ -1,11 +1,11 @@
 /********************************************* **
 |		  KNoT-CLI created by SmartLabs		 	|
-| 			   version 0.1.0 draft				|
+| 			   version 0.1.2 draft				|
 |												|
 ** ******************************************** */
 
 /* Libraries */
-#include "lib/knot.h"
+#include "../lib/utility.h"
 
 
 /* Constants and Defines */ 
