:rocket: New version (0.1.4)

--- a/src/templates/program.c.ejs
+++ b/src/templates/program.c.ejs
@@ -1,7 +1,7 @@
 /********************************************* **
 |		  KNoT-CLI created by SmartLabs		 	|
-| 			   version 0.1.3 draft				|
-|												|
+| 			      version 0.1.4				    |
+|		 										|
 ** ******************************************** */
 
 /* Libraries */
